[project]
name = "paper-translator"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Heegreis", email = "run3113214@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["nvidia", "conda-forge", "pytorch"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
paper-translator = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.cuda121.dependencies]
pytorch = "==2.3.1"
pytorch-cuda = "12.1.*"

[tool.pixi.environments]
cuda121 = ["cuda121"]


[tool.ruff.lint]
select = ["I"]

[tool.ruff.format]
quote-style = "single"
